# mapjson

./: .gitignore  README.md  setup.cfg  tox.ini
jmr/: __init__.py  jmr.py
jmr/tests/: test_jmr.py
mapjson/: __init__.py  mapjson.py  mappable_json.py
mapjson/tests/: test_mapjson.py
tests/: FIELDS_MAPPING.csv  test_jmr.py
