[metadata]
name = jmr
version = 1.0.0
url = https://github.com/hinatades/jmr
author = hinatades
author_email = hnttisk@gmail.com
license = MIT
description = Python wrapper for JSON
long_description = file: README.md

[options]
zip_safe = False

[flake8]
max-line-length = 99
[pep8]
max-line-length = 99
